@startuml
!pragma layout smetana
'https://plantuml.com/class-diagram
!theme reddress-lightblue
skinparam backgroundColor none
skinparam ArrowColor white
skinparam ArrowThickness 2
skinparam roundcorner 20
skinparam ArrowFontColor White
skinparam ArrowFontSize 18
skinparam package {
BackgroundColor grey
BorderColor darkgrey
}
abstract class User{
- name
- phone
- email
- password
- role - ENUM
}
class Organizer{
- organizer name
- List<Advert>

}
class Admin{}
class Attendee{
- List<Event> favorites
- List<Event> liked
}
User --> Organizer
User --> Admin
User --> Attendee

class Event {
- title
- description
- startDate
- endDate
- time
- price
- category - ENUM
- address
- location
- latitude
- longitude
}
Event ---- Attendee
Event -- Admin
Event -- Organizer
Event -- Advert

class Advert{
- placement
- price
- startDate
- endDate
- status
}
Organizer -- Advert
@enduml